--- a/index.html
+++ b/index.html
@@ -1099,34 +1099,34 @@
             </figure>
 
             <p class="lang lang-en">
-                The properties of the cross product allow us to conclude that `vecM` is a vector perpendicular to the plane defined by `vecr` and `vecv` and it doesn't change if we move the sliding vector`vecv`  along its line of action. This is because the moment of a sliding vector is a measure of its tendency to cause rotation about a point or axis, which is determined by both the vector’s magnitude and its distance from the point or axis.
+                The properties of the cross product allow us to conclude that `vecM` is a vector perpendicular to the plane defined by `vecr` and `vecv` and it doesn't change if we move the sliding vector `vecv` along its line of action. This is because the moment of a sliding vector is a measure of its tendency to cause rotation about a point or axis, which is determined by both the vector’s magnitude and its distance from the point or axis.
             </p>
             <p class="lang lang-es" lang="es">
-                The properties of the cross product allow us to conclude that `vecM` is a vector perpendicular to the plane defined by `vecr` and `vecv` and it doesn't change if we move the sliding vector`vecv`  along its line of action. This is because the moment of a sliding vector is a measure of its tendency to cause rotation about a point or axis, which is determined by both the vector’s magnitude and its distance from the point or axis.
+                Las propiedades del producto vectorial nos permiten concluir que `vecM` es un vector perpendicular al plano definido por `vecr` y `vecv` y que no cambia si movemos el vector deslizante `vecv` a lo largo de su línea de acción. Esto se debe a que el momento de un vector deslizante es una medida de su tendencia a causar rotación alrededor de un punto o eje, que está determinada tanto por la magnitud del vector como por su distancia desde el punto o eje.
             </p>
 
             <p class="lang lang-en">
                 When you slide a vector along its line of action, you’re not changing the sliding vector’s magnitude or the perpendicular distance from its line of action to the point or axis of interest. Therefore, the moment remains the same. This property is what makes it a “sliding vector”.
             </p>
             <p class="lang lang-es" lang="es">
-                When you slide a vector along its line of action, you’re not changing the sliding vector’s magnitude or the perpendicular distance from its line of action to the point or axis of interest. Therefore, the moment remains the same. This property is what makes it a “sliding vector”.
+                Al deslizar un vector a lo largo de su línea de acción, no cambia la magnitud del vector deslizante ni la distancia perpendicular desde su línea de acción hasta el punto o eje de interés. Por lo tanto, el momento sigue siendo el mismo. Esta propiedad es lo que lo convierte en un "vector deslizante".
             </p>
             <p class="lang lang-en">
                 This concept is fundamental in physics and engineering, as it helps us understand and calculate the effects of forces on the rotation of objects.
             </p>
             <p class="lang lang-es" lang="es">
-                This concept is fundamental in physics and engineering, as it helps us understand and calculate the effects of forces on the rotation of objects.
+                Este concepto es fundamental en física e ingeniería, ya que nos ayuda a comprender y calcular los efectos de las fuerzas en la rotación de los objetos.
             </p> 
         </section>
 
         <section>
             <h3 class="lang lang-en">Moment of a Sliding Vector About a Line</h3>
-            <h3 class="lang lang-es" lang="es">Moment of a Sliding Vector About a Line</h3>
+            <h3 class="lang lang-es" lang="es">Momento de un Vector Deslizante respecto de una Línea</h3>
             <p class="lang lang-en">
                 The moment of a sliding vector about a line of interest g is the projection onto said line of the moment of the vector with respect to any point on the line.
             </p>
             <p class="lang lang-es" lang="es">
-                The moment of a sliding vector about a line of interest g is the projection onto said line of the moment of the vector with respect to any point on the line.
+                El momento de un vector deslizante alrededor de una recta de interés g es la proyección sobre dicha recta del momento del vector con respecto a cualquier punto de la recta.
             </p>
             <figure class="centered">
                 <svg viewBox="0 0 400 400" xmlns="http://www.w3.org/2000/svg" width="400" height="400">
@@ -1231,39 +1231,39 @@
                 </svg > 
     
                 <figcaption class="lang lang-en"><b>Figure 1.9</b> Moment of a sliding vector `vecv` about line g, `norm(vecM_g) = vecu_g * (vecr xx vecv)`.</figcaption>
-                <figcaption class="lang lang-es" lang="es"><b>Figure 1.9</b> Moment of a sliding vector `vecv` about line g, `norm(vecM_g) = vecu_g * (vecr xx vecv)`.</figcaption>
+                <figcaption class="lang lang-es" lang="es"><b>Figura 1.9</b> Momento de un vector deslizante `vecv` respecto de la línea g, `norm(vecM_g) = vecu_g * (vecr xx vecv)`.</figcaption>
             </figure>
                  
             <p class="lang lang-en">
                 The magnitude of the moment of a sliding vector about a line g, `norm(vecM_g)` can be calculated using the cross and dot product of three vectors:
-                <ol>
+                <ol class="lang lang-en">
                     <li>Unit vector along the line of interest g, `vecu_g = << u_(gx), u_(gy), u_(gz) >> `.</li>
-                    <li>Position vector `vecr = << r_x, r_y, r_z >>` from any point along the line of interest g to any point on the line of action of the sliding vector P.</li>
+                    <li>Position vector `vecr = << r_x, r_y, r_z >>` from any point along the line of interest g to any point on the line of action of the sliding vector `vecv`.</li>
                     <li>The sliding vector `vecv = << v_x, v_y, v_z >> `.</li>
                 </ol>
                 That is:
             </p>
             <p class="lang lang-es" lang="es">
-                The magnitude of the moment of a sliding vector about a line g, `norm(vecM_g)` can be calculated using the cross and dot product of three vectors:
-                <ol>
-                    <li>Unit vector along the line of interest g, `vecu_g = << u_(gx), u_(gy), u_(gz) >> `.</li>
-                    <li>Position vector `vecr = << r_x, r_y, r_z >>` from any point along the line of interest g to any point on the line of action of the sliding vector P.</li>
-                    <li>The sliding vector `vecv = << v_x, v_y, v_z >> `.</li>
+                La magnitud del momento de un vector deslizante alrededor de una recta g, `norm(vecM_g)` se puede calcular utilizando el producto vectorial y escalar de tres vectores:
+                <ol class="lang lang-es" lang="es">
+                    <li>Vector unitario a lo largo de la línea de interés g, `vecu_g = << u_(gx), u_(gy), u_(gz) >> `.</li>
+                    <li>Vector de posición `vecr = << r_x, r_y, r_z >>` desde cualquier punto de la línea de interés g hasta cualquier punto de la línea de acción del vector deslizante `vecv`.</li>
+                    <li>El vector deslizante `vecv = << v_x, v_y, v_z >> `.</li>
                 </ol>
-                That is:
+                Esto es:
             </p>
             <p>&emsp; `norm(vecM_g) = vecu_g * (vecr xx vecv)`</p>
 
             <p class="lang lang-en">
-                To streamline the calculations even further, mathematically we can combine the cross and dot product into what is known as a mixed triple product. In the mixed triple product we write the cross product as a determinant in the form:
+                To streamline the calculations even further, mathematically we can combine the cross and dot product into what is known as a <stron>mixed triple product</stron>. In the mixed triple product we write the cross product as a determinant in the form:
             </p>
             <p class="lang lang-es" lang="es">
-                To streamline the calculations even further, mathematically we can combine the cross and dot product into what is known as a mixed triple product. In the mixed triple product we write the cross product as a determinant in the form:
+                Para simplificar aún más los cálculos, matemáticamente podemos combinar el producto vectorial y escalar en lo que se conoce como un <strong>producto mixto</strong>. En el producto mixto escribimos el producto como un determinante con la forma:
             </p>
             <p>  &emsp; `norm(vecM_g) = vecu_g * (vecr xx vecv) = |[u_(gx), u_(gy), u_(gz)], [r_x, r_y, r_z], [v_x, v_y, v_z]| = u_(gx)*|[r_y, r_z], [v_y, v_z]| - u_(gy)*|[r_x, r_z], [v_x, v_z]| + u_(gz)*|[r_x, r_y], [v_x, v_y]|` </p>
 
-            <p class="lang lang-en">Finally, lets remember that:</p>
-            <p class="lang lang-es" lang="es">Finally, lets remember that:</p>
+            <p class="lang lang-en">Finally, since a vector can be expressed as the product of its modulus and its unit vector, we have:</p>
+            <p class="lang lang-es" lang="es">Finalmente, como un vector se puede expresar como el producto de su módulo por su vecotr unitario, tenemos que:</p>
             <p>&emsp; `vecM_g = norm(vecM_g) * vecu_g`</p>
         </section>
 
