--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
         <ul>
             <li><a href="#Home">Inicio</a></li>
             <li><a href="#Vectores">Vectores</a></li>
-            <li><a href="#Geometry">Geometría</a></li>
-            <li><a href="#Vector Operations Exercises">Ejercicios sobre vectores</a></li>
+            <li><a href="#Geometría">Geometría</a></li>
+            <li><a href="#Ejercicios con vectores">Ejercicios sobre vectores</a></li>
         </ul>
     </nav>
 
@@ -1269,36 +1269,36 @@
 
         <section>
             <h3 class="lang lang-en">Vector Functions</h3>
-            <h3 class="lang lang-es" lang="es">Vector Functions</h3>
+            <h3 class="lang lang-es" lang="es">Funciones Vectoriales</h3>
             <p class="lang lang-en">
                 A <strong>vector-valued function</strong>, also referred to as a <strong>vector function</strong>, is a mathematical function of one or more variables whose range is a set of vectors.
             </p>
             <p class="lang lang-es" lang="es">
-                A <strong>vector-valued function</strong>, also referred to as a <strong>vector function</strong>, is a mathematical function of one or more variables whose range is a set of vectors.
+                Una <strong>función vectorial</strong> es una función matemática de una o más variables cuyo rango es un conjunto de vectores.
             </p>
             <p class="lang lang-en">
-                For example, a common type of vector-valued function is one that depends on a single real parameter t and produces a vector `vecf(t)` as the result. In terms of the standard unit vectors i, j, k of Cartesian 3D-space, these specific types of vector-valued functions are given by expressions such as:
+                For example, a common type of vector-valued function is one that depends on a single real parameter t and produces a vector `vecf(t)` as the result. In terms of the standard unit vectors `veci`, `vecj`, `veck´ of Cartesian 3D-space, these specific types of vector-valued functions are given by expressions such as:
             </p>
             <p class="lang lang-es" lang="es">
-                For example, a common type of vector-valued function is one that depends on a single real parameter t and produces a vector `vecf(t)` as the result. In terms of the standard unit vectors i, j, k of Cartesian 3D-space, these specific types of vector-valued functions are given by expressions such as:
+                Por ejemplo, un tipo común de función vectorial es aquella que depende de un único parámetro real t y produce un vector `vecf(t)` como resultado. En términos de los vectores unitarios estándar `veci`, `vecj`, `veck´ del espacio cartesiano 3D, estos tipos específicos de funciones con valores vectoriales vienen dados por expresiones como:
             </p>
             <p> &emsp; `vecf(t)=f_x(t)veci+f_y(t)vecj+f_z(t)veck`</p>
             <p class="lang lang-en">
-                where `f_x(t)`, `f_y(t)`, and `f_z(t)` are the <strong>coordinate functions</strong> of the parameter t, and the domain of this vector-valued function is the intersection of the domains of the functions `f_x`, `f_y`, and `f_z`.
+                where `f_x(t)`, `f_y(t)`, and `f_z(t)` are the <strong>coordinate functions</strong> of the parameter t, and the domain of this vector-valued function is the intersection of the domains of the functions `f_x(t)`, `f_y(t)` and `f_z(t)`.
             </p>
-            <pclass="lang lang-es" lang="es">
-                where `f_x(t)`, `f_y(t)`, and `f_z(t)` are the <strong>coordinate functions</strong> of the parameter t, and the domain of this vector-valued function is the intersection of the domains of the functions `f_x`, `f_y`, and `f_z`.
+            <p class="lang lang-es" lang="es">
+                Donde `f_x(t)`, `f_y(t)` y `f_z(t)` son las funciones de coordenadas del parámetro t, y el dominio de esta función vectorial es la intersección de los dominios de las funciones `f_x(t)`, `f_y(t)` y `f_z(t)`.
             </p>
         </section>
 
         <section>
             <h3 class="lang lang-en">Derivative of a vector-valued function</h3>
-            <h3 class="lang lang-es" lang="es">Derivative of a vector-valued function</h3>
+            <h3 class="lang lang-es" lang="es">Derivada de una función vectorial</h3>
             <p class="lang lang-en">
                 The <strong>derivative of a vector-valued function</strong> is nearly identical to the definition of derivative of a real-valued function of one variable. However, because the range of a vector-valued function consists of vectors, the same is true for the range of the derivative of a vector-valued function. That is:
             </p>
             <p class="lang lang-es" lang="es">
-                The <strong>derivative of a vector-valued function</strong> is nearly identical to the definition of derivative of a real-valued function of one variable. However, because the range of a vector-valued function consists of vectors, the same is true for the range of the derivative of a vector-valued function. That is:
+                La <strong>derivada de una función vectorial</strong> es casi idéntica a la definición de derivada de una función real de una variable. Sin embargo, debido a que el rango de una función con valores vectoriales consta de vectores, lo mismo ocurre con el rango de la derivada de una función con valores vectoriales. Es decir:
             </p>
             <p> &emsp; `vecf'(t) = (dvecf)/dt = (df_x)/dtveci + (df_y)/dtvecj +(df_z)/dtveck`</p>
         </section>
@@ -1307,42 +1307,42 @@
             <h3 class="lang lang-en">Partial derivative of a function and its Total derivative</h3>
             <h3 class="lang lang-es" lang="es">Partial derivative of a function and its Total derivative</h3>
             <p class="lang lang-en">
-                If f depends of more than one variable, its <strong>partial derivative</strong> with respect to one of its variables is computed by taking the partial derivative of each component of the vector function with respect to that variable while considering the rest of variables remaining constant.
+                If a function depends of more than one variable, its <strong>partial derivative</strong> is the derivative with respect to one of those variables, keeping the others as constants.
             </p>
             <p class="lang lang-es" lang="es">
-                If f depends of more than one variable, its <strong>partial derivative</strong> with respect to one of its variables is computed by taking the partial derivative of each component of the vector function with respect to that variable while considering the rest of variables remaining constant.
+                Si una función depende de más de una variable, su <strong>derivada parcial</strong> es la derivada con respecto a una de esas variables manteniendo las otras como constantes.
             </p>
             <p class="lang lang-en">
-                The partial derivative of a function respect of one variable, x, is represented as:
+                The partial derivative of a function `f(x,y,z)` respect of one variable, x, is represented as:
             </p>
             <p class="lang lang-es" lang="es">
-                The partial derivative of a function respect of one variable, x, is represented as:
+                La derivada parcial de una función `f(x,y,z)` respecto a una de sus variables, x, se representa como:
             </p>
             <p> &emsp; `(delf)/(delx)`</p>
             <p class="lang lang-en">
-                Then the <strong>total derivative</strong> of the function `f(x,y,z)` is the expression:
+                The <strong>total derivative</strong> of the function `f(x,y,z)` can be calculated using the expression:
             </p>
             <p class="lang lang-es" lang="es">
-                Then the <strong>total derivative</strong> of the function `f(x,y,z)` is the expression:
+                La <strong>derivada total</strong> de una función `f(x,y,z)` se puede calcular mediante la expresión:
             </p>
             <p>&emsp; `df = (delf)/(delx)dx + (delf)/(dely)dy + (delf)/(delz)dz`</p>
         </section>
 
         <section>
             <h3 class="lang lang-en">Integral of a vector-valued function</h3>
-            <h3 class="lang lang-es" lang="es">Integral of a vector-valued function</h3>
+            <h3 class="lang lang-es" lang="es">Integral de una función vectorial</h3>
             <p class="lang lang-en">
-                The <strong>integral of a vector-valued function</strong> is another vector-valued function where its coordinated functions are the integrals of the initial vector-valued function. That is, if  `vecf(t) = f_x(t)veci+f_y(t)vecj+f_z(t)veck = << f_x(t), f_y(t), f_z(t) >> `, its integral is: 
+                To find the <strong>integral of a vector-valued function</strong>, we usually split it into its components and integrate each component separately. That is, if  `vecf(t) = f_x(t)veci+f_y(t)vecj+f_z(t)veck = << f_x(t), f_y(t), f_z(t) >> `, its integral is: 
             </p>
             <p class="lang lang-es" lang="es">
-                The <strong>integral of a vector-valued function</strong> is another vector-valued function where its coordinated functions are the integrals of the initial vector-valued function. That is, if  `vecf(t) = f_x(t)veci+f_y(t)vecj+f_z(t)veck = << f_x(t), f_y(t), f_z(t) >> `, its integral is: 
+                La <strong>integral de una función vectorial</strong> es otra función vectorial en la que sus funciones coordenadas son las integrales de la funciones coordenadas de la función vectorial inicial. Es decir, si `vecf(t) = f_x(t)veci+f_y(t)vecj+f_z(t)veck = << f_x(t), f_y(t), f_z(t) >> `, su integral es: 
             </p>
             <p>&emsp; `int vecf(t)dt = int << f_x(t), f_y(t), f_z(t) >> dt = << int f_x(t)dt, int f_y(t)dt, int f_z(t)dt >> `</p>
         </section>
 
         <aside>
             <h3 class="lang lang-en">References</h3>
-            <h3 class="lang lang-es" lang="es">References</h3>
+            <h3 class="lang lang-es" lang="es">Referencias</h3>
             <!-- references to concepts used in this article. target="_blank" will display the link in a new tab.-->
             <ul>
                 <li>
@@ -1378,52 +1378,51 @@
 
     <article>
         <h2 id="Geometry" class="lang lang-en">Geometry</h2>
-        <h2 id="Geometry" class="lang lang-es" lang="es">Geometry</h2>
+        <h2 id="Geometría" class="lang lang-es" lang="es">Geometría</h2>
         <section>
             <h3 class="lang lang-en">Pythagorean theorem</h3>
-            <h3 class="lang lang-es" lang="es">Pythagorean theorem</h3>
+            <h3 class="lang lang-es" lang="es">Teorema de Pitágoras</h3>
             <p class="lang lang-en">
-                In any right triangle ΔABC, where c is the length of the hypotenuse and a and b are the lengths of the legs,
+                In any right triangle `/_\ABC`, where c is the length of the hypotenuse and a and b are the lengths of the legs,
             </p>
             <p class="lang lang-es" lang="es">
-                In any right triangle ΔABC, where c is the length of the hypotenuse and a and b are the lengths of the legs,
+                En cualquier triángulo rectángulo `/_\ABC`, donde c es la longitud de la hipotenusa y a y b son las longitudes de los catetos,
             </p>
             <p class="centered">
-                a<sup>2</sup> + b<sup>2</sup> = c<sup>2</sup>.
+                `a^2 + b^2 = c^2`
             </p>
 
             <figure class="centered">
                 <img src="images\RightTriangle.svg" width="300" height="225" />
 
                 <figcaption class="lang lang-en"><b>Figure A.1</b> Right triangle with hypotenuse c and legs a and b.</figcaption>
-                <figcaption class="lang lang-es" lang="es"><b>Figure A.1</b> Right triangle with hypotenuse c and legs a and b.</figcaption>
+                <figcaption class="lang lang-es" lang="es"><b>Figura A.1</b> Triángulo rectángulo con catetos a y b, e hipotenusa c.</figcaption>
             </figure>
         </section>
 
         <section>
-            <h3 class="lang lang-en">Graphical definitions of Sine, Cosine and Tangent Functions</h3>
-            <h3 class="lang lang-es" lang="es">Graphical definitions of Sine, Cosine and Tangent Functions</h3>
+            <h3 class="lang lang-en">Graphical definitions of sine, cosine and tangent functions</h3>
+            <h3 class="lang lang-es" lang="es">Definiciones gráficas de las funciones seno, coseno y tangente</h3>
             <p class="lang lang-en">
                 Let's consider a circunference with radius of length r with centre at the origin <i>O</i> in a
-                rectangular coordinate system, and a point P with coordinates (x,y) in the circunference. And let's name &alpha; the angle between the x-axis and the segment <SPAN class="segment">OP</SPAN>. Then, <b>sin &alpha;</b> is the ratio y/r, <b>cos &alpha;</b> is the ratio x/r and <b>tan &alpha;</b> is the ratio y/x.
+                rectangular coordinate system, and a point P with coordinates (x,y) in the circunference. And let's name &alpha; the angle between the x-axis and the segment <SPAN class="segment">OP</SPAN>. Then, `sin alpha` is the ratio y/r, `cos alpha` is the ratio x/r and `tan alpha` is the ratio y/x.
             </p>
             <p class="lang lang-es" lang="es">
-                Let's consider a circunference with radius of length r with centre at the origin <i>O</i> in a
-                rectangular coordinate system, and a point P with coordinates (x,y) in the circunference. And let's name &alpha; the angle between the x-axis and the segment <SPAN class="segment">OP</SPAN>. Then, <b>sin &alpha;</b> is the ratio y/r, <b>cos &alpha;</b> is the ratio x/r and <b>tan &alpha;</b> is the ratio y/x.
+                Consideremos una circunferencia con radio de longitud r con centro en el origen <i>O</i> en a sistema de coordenadas rectangulares, y un punto P con coordenadas (x,y) en la circunferencia. Y nombremos &alpha; a el ángulo entre el eje x y el segmento OP. Entonces, `sen alpha` es el cociente y/r, `cos alpha` es el cociente x/r y `tan alpha` es el cociente y/x.
             </p>
             <figure class="centered">
                 <img src="images\Circunference_and_coordinates.svg" width="300" height="300" />
 
-                <figcaption class="lang lang-en"><b>Figure A.2</b> circunference of radius r with a point P and angle &alpha; with x-axis.
+                <figcaption class="lang lang-en"><b>Figure A.2</b> Circunference of radius r with a point P and angle &alpha; with x-axis.
                 </figcaption>
-                <figcaption class="lang lang-es" lang="es"><b>Figure A.2</b> circunference of radius r with a point P and angle &alpha; with x-axis.
+                <figcaption class="lang lang-es" lang="es"><b>Figure A.2</b> Circunferencia de radio r con un punto P y su ángulo &alpha; con el eje x.
                 </figcaption>
             </figure>
         </section>
 
         <aside><!-- references to concepts used in this section target="_blank" will display the link in a new tab.-->
             <h4 class="lang lang-en">References</h4>
-            <h4 class="lang lang-es" lang="es">References</h4>
+            <h4 class="lang lang-es" lang="es">Referencias</h4>
             <ul>
                 <li>
                     <a href="https://openstax.org/books/prealgebra-2e/pages/9-3-use-properties-of-angles-triangles-and-the-pythagorean-theorem#:~:text=of%20the%20hypotenuse.-,THE%20PYTHAGOREAN%20THEOREM,-In%20any%20right"
@@ -1461,28 +1460,28 @@
 
     <article>
         <h2 id="Vector Operations Exercises" class="lang lang-en">VECTOR OPERATIONS EXERCISES</h2>
-        <h2 id="Vector Operations Exercises" class="lang lang-es" lang="es">VECTOR OPERATIONS EXERCISES</h2>
+        <h2 id="Ejercicios con vectores" class="lang lang-es" lang="es">EJERCIOS CON VECTORES</h2>
         <section>
             <h3 class="lang lang-en">Exercise 1</h3>
-            <h3 class="lang lang-es" lang="es">Exercise 1</h3>
+            <h3 class="lang lang-es" lang="es">Ejercicio 1</h3>
             <p class="lang lang-en">
                 A boatman is rowing on the boat, wanting to always stay perpendicular to the river bank and crossing with an average speed of 36 km / h. The river water flows with a speed of 9 km / h. How fast should the boat be propelled? In what direction?
             </p>
             <p class="lang lang-es" lang="es">
-                A boatman is rowing on the boat, wanting to always stay perpendicular to the river bank and crossing with an average speed of 36 km / h. The river water flows with a speed of 9 km / h. How fast should the boat be propelled? In what direction?
+                Un barquero está remando en el bote, queriendo mantenerse siempre perpendicular a la orilla del río y cruzando con una velocidad media de 36 km/h. El agua del río fluye a una velocidad de 9 km/h. ¿A qué velocidad debe propulsarse el barco? ¿En qué dirección?
             </p>
             <p class="lang lang-en">
-                Lets represent the river in a coordinate plane where the water flows in same direction thant the x-axis, and the y-axis is perpendicular to the river bank. Then, we represent <b><i>v<sub>r</sub></i></b> as water velocity and <b><i>v</i></b> as the velocity with which the boat is propelled. And decompose <b><i>v</i></b> into x and y parts.
+                Lets represent the river in a coordinate plane where the water flows in same direction thant the x-axis, and the y-axis is perpendicular to the river bank. Then, we represent `vecv_r` as water velocity and `vecv` as the velocity with which the boat is propelled. And decompose `vecv` And decompose `vecv` into its x and y components.
             </p>
             <p class="lang lang-es" lang="es">
-                Lets represent the river in a coordinate plane where the water flows in same direction thant the x-axis, and the y-axis is perpendicular to the river bank. Then, we represent <b><i>v<sub>r</sub></i></b> as water velocity and <b><i>v</i></b> as the velocity with which the boat is propelled. And decompose <b><i>v</i></b> into x and y parts.
+                Vamos a representar el río en un plano de coordenadas donde el agua fluye en la misma dirección que el eje x, y el eje y es perpendicular a la orilla del río. Luego, representamos `vecv_r` como la velocidad del agua y `vecv` como la velocidad con la que se propulsa el barco. Y descomponer `vecv` en sus componentes x e y.
             </p>
 
             <figure class="centered">
                 <img src="images\BoatAndRiver.svg" width="669" height="409" />
 
                 <figcaption class="lang lang-en"><b>Figure 2.1,</b> showing coordinate-plane, water velocity and boat velocity.</figcaption>
-                <figcaption class="lang lang-es" lang="es"><b>Figure 2.1,</b> showing coordinate-plane, water velocity and boat velocity.</figcaption>
+                <figcaption class="lang lang-es" lang="es"><b>Figura 2.1,</b> mostrando plano de coordenadas, velocidad del agua y velocidad del barco.</figcaption>
             </figure>
 
             <p class="lang lang-en">
