--- a/index.html
+++ b/index.html
@@ -1474,35 +1474,35 @@
                 Lets represent the river in a coordinate plane where the water flows in same direction thant the x-axis, and the y-axis is perpendicular to the river bank. Then, we represent `vecv_r` as water velocity and `vecv` as the velocity with which the boat is propelled. And decompose `vecv` And decompose `vecv` into its x and y components.
             </p>
             <p class="lang lang-es" lang="es">
-                Vamos a representar el río en un plano de coordenadas donde el agua fluye en la misma dirección que el eje x, y el eje y es perpendicular a la orilla del río. Luego, representamos `vecv_r` como la velocidad del agua y `vecv` como la velocidad con la que se propulsa el barco. Y descomponer `vecv` en sus componentes x e y.
+                Vamos a representar el río en un plano de coordenadas donde el agua fluye en la misma dirección que el eje x, y el eje y es perpendicular a la orilla del río. Luego, representamos `vecv_r` como la velocidad del agua del río y `vecv` como la velocidad con la que se propulsa el barco. Y descomponer `vecv` en sus componentes x e y.
             </p>
 
             <figure class="centered">
                 <img src="images\BoatAndRiver.svg" width="669" height="409" />
 
-                <figcaption class="lang lang-en"><b>Figure 2.1,</b> showing coordinate-plane, water velocity and boat velocity.</figcaption>
-                <figcaption class="lang lang-es" lang="es"><b>Figura 2.1,</b> mostrando plano de coordenadas, velocidad del agua y velocidad del barco.</figcaption>
+                <figcaption class="lang lang-en"><b>Figure 2.1,</b> showing coordinate-plane, `vecv_r` as the water velocity and `vecv` as the velocity with which the boat is propelled.</figcaption>
+                <figcaption class="lang lang-es" lang="es"><b>Figura 2.1,</b> mostrando plano de coordenadas, `vecv_r` como la velocidad del agua del río y `vecv` como la velocidad con la que se propulsa el barco.</figcaption>
             </figure>
 
             <p class="lang lang-en">
-                Then,
+                Then, according to the data of the exercise,
             </p>
             <p class="lang lang-es" lang="es">
-                Then,
+                Entonces, según los datos del ejercicio,
             </p>
             <p>
                 &emsp; `vecv_r = << 9 (Km)/h, 0 (Km)/h >> `,
             </p>
 
             <p>
-                &emsp; `vec v = << v_x , v_y >> `,
+                &emsp; `vecv = << v_x , v_y >> `,
             </p>
 
             <p class="lang lang-en">
-                and the velocity of the boat wil be
+                We can consider that the velecity and the velocity of the boat wil be
             </p>
             <p class="lang lang-es" lang="es">
-                and the velocity of the boat wil be
+                Podemos considerar que la velocidad del barco respecto a la orilla del río es una suma de la velocidad con la que se propulsa el barco `vecv` más la la velocidad del agua del río `vecv_r`. Por ejemplo si el barquero no remara, `vecv = vec0` y la velocidad del barco respecto a la orilla sería igual a la velocidad del agua del río. Entonces,
             </p>
             <p>
                 &emsp; `vecv + vecv_r = << 9 + v_x (Km)/h, v_y (Km)/h >> `.
