--- a/index.html
+++ b/index.html
@@ -1471,10 +1471,10 @@
                 Un barquero está remando en el bote, queriendo mantenerse siempre perpendicular a la orilla del río y cruzando con una velocidad media de 36 km/h. El agua del río fluye a una velocidad de 9 km/h. ¿A qué velocidad debe propulsarse el barco? ¿En qué dirección?
             </p>
             <p class="lang lang-en">
-                Lets represent the river in a coordinate plane where the water flows in same direction thant the x-axis, and the y-axis is perpendicular to the river bank. Then, we represent `vecv_r` as water velocity and `vecv` as the velocity with which the boat is propelled. And decompose `vecv` And decompose `vecv` into its x and y components.
+                Lets represent the river in a coordinate plane where the water flows in same direction thant the x-axis, and the y-axis is perpendicular to the river bank. Then, we represent `vecv_r` as water velocity and `vecv` as the velocity with which the boat is propelled. And decompose `vecv` into its x and y components. As the vectors that represent velocity are free vectors, we place the origin of `vecv_r` and `vecv` at the origin of coordinates, as standard-position vectors.
             </p>
             <p class="lang lang-es" lang="es">
-                Vamos a representar el río en un plano de coordenadas donde el agua fluye en la misma dirección que el eje x, y el eje y es perpendicular a la orilla del río. Luego, representamos `vecv_r` como la velocidad del agua del río y `vecv` como la velocidad con la que se propulsa el barco. Y descomponer `vecv` en sus componentes x e y.
+                Vamos a representar el río en un plano de coordenadas donde el agua fluye en la misma dirección que el eje x, y el eje y es perpendicular a la orilla del río. Luego, representamos `vecv_r` como la velocidad del agua del río y `vecv` como la velocidad con la que se propulsa el barco. Y descomponer `vecv` en sus componentes x e y. Como los vectores que representan la velocidad son vectores libres, situamos el origen de `vecv_r` y `vecv` en el origen de coordenadas, como vectores de posición estándar.
             </p>
 
             <figure class="centered">
