--- a/index.html
+++ b/index.html
@@ -1499,7 +1499,7 @@
             </p>
 
             <p class="lang lang-en">
-                We can consider that the velecity and the velocity of the boat wil be
+                We can consider that the speed of the boat with respect to the river bank is a sum of the speed with which the boat is propelled `vecv` plus the speed of the river water `vecv_r`. For example, if the boatman did not row, `vecv = vec0` and the speed of the boat with respect to the shore would be equal to the speed of the river water. So,
             </p>
             <p class="lang lang-es" lang="es">
                 Podemos considerar que la velocidad del barco respecto a la orilla del río es una suma de la velocidad con la que se propulsa el barco `vecv` más la la velocidad del agua del río `vecv_r`. Por ejemplo si el barquero no remara, `vecv = vec0` y la velocidad del barco respecto a la orilla sería igual a la velocidad del agua del río. Entonces,
@@ -1509,10 +1509,10 @@
             </p>
 
             <p class="lang lang-en">
-                So, to stay perpendicular to the river
+                So, to stay perpendicular to the river, the x-component of the vector sum must be zero.
             </p>
             <p class="lang lang-es" lang="es">
-                So, to stay perpendicular to the river
+                Entonces, para permanecer perpendicular al río, la componente x de la suma debe ser cero.
             </p>
             <p >
                 &emsp; `9 + v_x = 0 => v_x = -9 (km)/h`
