--- a/index.html
+++ b/index.html
@@ -1519,10 +1519,10 @@
             </p>
 
             <p class="lang lang-en">
-                and
+                and, since the boatman wants to cross with an average speed of 36 km/h, the y component of the sum must be 36 km/h.
             </p>
             <p class="lang lang-es" lang="es">
-                y
+                y, como el barquero quire cruzar con una velocidad media de 36 km/h, la componente y de la suma debe ser 36 km/h.
             </p>
             <p>
                 &emsp; `v_y = 36 (km)/h`,
