--- a/index.html
+++ b/index.html
@@ -1468,27 +1468,27 @@
                 A boatman is rowing on the boat, wanting to always stay perpendicular to the river bank and crossing with an average speed of 36 km / h. The river water flows with a speed of 9 km / h. How fast should the boat be propelled? In what direction?
             </p>
             <p class="lang lang-es" lang="es">
-                Un barquero está remando en el bote, queriendo mantenerse siempre perpendicular a la orilla del río y cruzando con una velocidad media de 36 km/h. El agua del río fluye a una velocidad de 9 km/h. ¿A qué velocidad debe propulsarse el barco? ¿En qué dirección?
+                Un barquero está remando en el bote, queriendo mantenerse siempre perpendicular a la orilla del río y cruzando con una velocidad media de 36 km/h. El agua del río fluye a una velocidad de 9 km/h. ¿A qué velocidad debe propulsarse el bote? ¿En qué dirección?
             </p>
             <p class="lang lang-en">
                 Lets represent the river in a coordinate plane where the water flows in same direction thant the x-axis, and the y-axis is perpendicular to the river bank. Then, we represent `vecv_r` as water velocity and `vecv` as the velocity with which the boat is propelled. And decompose `vecv` into its x and y components. As the vectors that represent velocity are free vectors, we place the origin of `vecv_r` and `vecv` at the origin of coordinates, as standard-position vectors.
             </p>
             <p class="lang lang-es" lang="es">
-                Vamos a representar el río en un plano de coordenadas donde el agua fluye en la misma dirección que el eje x, y el eje y es perpendicular a la orilla del río. Luego, representamos `vecv_r` como la velocidad del agua del río y `vecv` como la velocidad con la que se propulsa el barco. Y descomponer `vecv` en sus componentes x e y. Como los vectores que representan la velocidad son vectores libres, situamos el origen de `vecv_r` y `vecv` en el origen de coordenadas, como vectores de posición estándar.
+                Vamos a representar el río en un plano de coordenadas donde el agua fluye en la misma dirección que el eje x, y el eje y es perpendicular a la orilla del río. Luego, representamos `vecv_r` como la velocidad del agua del río y `vecv` como la velocidad con la que se propulsa el bote. Y descomponer `vecv` en sus componentes x e y. Como los vectores que representan la velocidad son vectores libres, situamos el origen de `vecv_r` y `vecv` en el origen de coordenadas, como vectores de posición estándar.
             </p>
 
             <figure class="centered">
                 <img src="images\BoatAndRiver.svg" width="669" height="409" />
 
                 <figcaption class="lang lang-en"><b>Figure 2.1,</b> showing coordinate-plane, `vecv_r` as the water velocity and `vecv` as the velocity with which the boat is propelled.</figcaption>
-                <figcaption class="lang lang-es" lang="es"><b>Figura 2.1,</b> mostrando plano de coordenadas, `vecv_r` como la velocidad del agua del río y `vecv` como la velocidad con la que se propulsa el barco.</figcaption>
+                <figcaption class="lang lang-es" lang="es"><b>Figura 2.1,</b> mostrando plano de coordenadas, `vecv_r` como la velocidad del agua del río y `vecv` como la velocidad con la que se propulsa el bote.</figcaption>
             </figure>
 
             <p class="lang lang-en">
-                Then, according to the data of the exercise,
+                According to the data of the exercise,
             </p>
             <p class="lang lang-es" lang="es">
-                Entonces, según los datos del ejercicio,
+                Según los datos del ejercicio,
             </p>
             <p>
                 &emsp; `vecv_r = << 9 (Km)/h, 0 (Km)/h >> `,
@@ -1502,7 +1502,7 @@
                 We can consider that the speed of the boat with respect to the river bank is a sum of the speed with which the boat is propelled `vecv` plus the speed of the river water `vecv_r`. For example, if the boatman did not row, `vecv = vec0` and the speed of the boat with respect to the shore would be equal to the speed of the river water. So,
             </p>
             <p class="lang lang-es" lang="es">
-                Podemos considerar que la velocidad del barco respecto a la orilla del río es una suma de la velocidad con la que se propulsa el barco `vecv` más la la velocidad del agua del río `vecv_r`. Por ejemplo si el barquero no remara, `vecv = vec0` y la velocidad del barco respecto a la orilla sería igual a la velocidad del agua del río. Entonces,
+                Podemos considerar que la velocidad del bote respecto a la orilla del río es una suma de la velocidad con la que se propulsa el bote `vecv` más la la velocidad del agua del río `vecv_r`. Por ejemplo si el barquero no remara, `vecv = vec0` y la velocidad del bote respecto a la orilla sería igual a la velocidad del agua del río. Entonces,
             </p>
             <p>
                 &emsp; `vecv + vecv_r = << 9 + v_x (Km)/h, v_y (Km)/h >> `.
@@ -1537,7 +1537,7 @@
                 expresed as `norm(vecv)`.
             </p>
             <p class="lang lang-es" lang="es">
-                La magnitud del vector `vec v` es la velocidad a la se impulsa el barco. Y se expresa como `norm(vecv)`.
+                La magnitud del vector `vec v` es la velocidad a la se impulsa el bote. Y se expresa como `norm(vecv)`.
             </p>
             <p>
                 &emsp; `norm(vecv) = sqrt(v_x^2+v_y^2) = sqrt(9^2 + 36^2) = sqrt(81+1296) = sqrt(1377) = 37.11 (km)/h.`
@@ -1547,7 +1547,7 @@
                 The value of the angle &phi; is the direction in wich the boat is propeled. <br />
             </p>
             <p class="lang lang-es" lang="es">
-                The value of the angle &phi; is the direction in wich the boat is propeled. <br />
+                El valor del ángulo  &phi; es la dirección en la que se impulsa el bote. <br />
             </p>
             <p>
                 &emsp; &phi; `= arctan(v_y/v_x) = arctan(36/-9) =` -76º
@@ -1622,26 +1622,10 @@
             </math> -->
 
             <p class="lang lang-en">
-                Here is important to consider that:
-                <ul>
-                    <li>
-                        There are many angles which its tangent is -4 (or any other value). For the tangent, the first two angles are &theta; and &theta; + 180º.
-                    </li>
-                    <li>
-                        The angle value given by the calculator is measured from positive side of the x axis.
-                    </li>
-                </ul>
+                But, usually the angle to calculate the orientation is measured from the x-asis, that is opossed to `v_x` in this case.
             </p>
             <p class="lang lang-es" lang="es">
-                Here is important to consider that:
-                <ul>
-                    <li>
-                        There are many angles which its tangent is -4 (or any other value). For the tangent, the first two angles are &theta; and &theta; + 180º.
-                    </li>
-                    <li>
-                        The angle value given by the calculator is measured from positive side of the x axis.
-                    </li>
-                </ul>
+                Pero, normalmente, el ángulo para calcular la orientación se mide desde el eje x, que en este caso está en dirección opuesta a `v_x`.
             </p>
             <p class="lang lang-en">
                 Then, first angle is -76º and second angle is 104º. Both measured from the positive side of the x axis. But the angle &alpha; represented in the drawing is measured between <b><i>v</i></b><sub>x</sub> and <b><i>v</i></b>. So, its value is 76º. <br />
