--- a/index.html
+++ b/index.html
@@ -1625,7 +1625,7 @@
                 But, usually the angle to calculate the orientation is measured from the x-asis, that is opossed to `v_x` in this case.
             </p>
             <p class="lang lang-es" lang="es">
-                Pero, normalmente, el ángulo para calcular la orientación se mide desde el eje x, que en este caso está en dirección opuesta a `v_x`.
+                Pero, normalmente, el ángulo para calcular la orientación se mide desde el eje x, que en este caso está en dirección opuesta a `v_x`. Así que, si medimos la orientación del bote respecto al eje x, ésta sería 180-76=104º.
             </p>
             <p class="lang lang-en">
                 Then, first angle is -76º and second angle is 104º. Both measured from the positive side of the x axis. But the angle &alpha; represented in the drawing is measured between <b><i>v</i></b><sub>x</sub> and <b><i>v</i></b>. So, its value is 76º. <br />
